name:          saas
version:       0.1.0
cabal-version: >= 1.8
build-type:    Simple
license:       GPL-3

executable          saas
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    other-modules:  Files
                  , Download
                  , Check
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty >= 0.10.0 && < 0.11
                  , ShellCheck
                  , wreq
                  , lens
                  , utf8-string
                  , transformers
                  , text
                  , http-types
                  , http-client
                  , mtl
                  , file-embed
                  , warp
                  , bytestring
